--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     class="form-control"
                     id="imageUrl"
                     aria-describedby="imageDesc"
-                    placeholder="https://rohan.com/image.png"
+                    placeholder="https://Bhargavi.com/image.png"
                   />
                   <div id="imageDesc" class="form-text">
                     Its a optional filed for you...
